[package]
description  = "SDK for Switchboard's Sui package; maintained by Aftermath"
edition      = "2024"
name         = "switchboard-sui-sdk"
rust-version = "1.85"
version      = "0.0.2"

authors.workspace    = true
categories.workspace = true
license.workspace    = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[features]
ptb = ["bytes/serde", "dep:af-ptbuilder", "dep:bytes", "dep:extension-traits"]

[dependencies]
af-move-type      = { version = "0.9.0", path = "../af-move-type" }
af-sui-pkg-sdk    = { version = "0.9.0", path = "../af-sui-pkg-sdk" }
af-sui-types      = { version = "0.8.0", path = "../af-sui-types" }
move-stdlib-sdk   = { version = "0.10.0", path = "../move-stdlib-sdk" }
sui-framework-sdk = { version = "0.11.0", path = "../sui-framework-sdk" }

bcs       = "0.1"
hex       = "0.4.3"
serde     = "1"
thiserror = "2"

# Optional deps
bytes            = { version = "1", optional = true }
extension-traits = { version = "2", optional = true }

# Optional aftermath deps
af-ptbuilder = { version = "5.0.0", optional = true, path = "../af-ptbuilder" }
