[package]
description = "SDK for Switchboard's Sui package; maintained by Aftermath"
name        = "switchboard-sui-sdk"
version     = "0.0.14"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[features]
ptb = ["bytes/serde", "dep:af-ptbuilder", "dep:bytes", "dep:extension-traits"]

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
af-ptbuilder      = { version = "5.0.9", public = true, optional = true, path = "../af-ptbuilder" }
af-sui-pkg-sdk    = { version = "0.9.9", public = true, path = "../af-sui-pkg-sdk" }
move-stdlib-sdk   = { version = "0.10.9", public = true, path = "../move-stdlib-sdk" }
sui-framework-sdk = { version = "0.11.10", public = true, path = "../sui-framework-sdk" }
sui-sdk-types     = { version = "0.0.3", public = true }

af-move-type = { version = "0.9.8", path = "../af-move-type" }
af-sui-types = { version = "0.8.8", path = "../af-sui-types" }

bcs       = "0.1"
hex       = "0.4.3"
serde     = "1"
thiserror = "2"

# Optional deps
bytes            = { version = "1", optional = true }
extension-traits = { version = "2", optional = true }
