[package]
description = "Move types for the Wormhole package"
name        = "wormhole-sui-sdk"
version     = "0.9.0"

authors.workspace    = true
categories.workspace = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
af-sui-pkg-sdk    = { version = "0.7", path = "../af-sui-pkg-sdk" }
af-sui-types      = { version = "0.6", path = "../af-sui-types" }
sui-framework-sdk = { version = "0.9", path = "../sui-framework-sdk" }

serde = "1"
